--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^16.4.5",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
+    "moment": "^2.30.1",
     "notistack": "^3.0.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
