--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,3 @@
 NODE_ENV=development
 DATABASE_URI=mongodb
-MONGODB_URL=mongodb+srv://bimsarashashitha:r0BedvXdgVUVYiKq@order.il3x72d.mongodb.net/?retryWrites=true&w=majority&appName=Order
+MONGODB_URL=mongodb+srv://imantha:imantha123@book-store-mern.olrcytu.mongodb.net/Stock-collection?retryWrites=true&w=majority&appName=Book-Store-MERN
