--- a/client/package.json
+++ b/client/package.json
@@ -10,27 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@fortawesome/free-brands-svg-icons": "^6.5.1",
-    "@fortawesome/free-regular-svg-icons": "^6.5.1",
-    "@fortawesome/free-solid-svg-icons": "^6.5.1",
-    "@fortawesome/react-fontawesome": "^0.2.0",
-    "@redux-devtools/extension": "^3.3.0",
     "axios": "^1.6.8",
-    "bootstrap": "^5.3.3",
-    "bootstrap-icons": "^1.11.3",
-    "chart.js": "^4.4.2",
-    "date-fns": "^3.6.0",
-    "dotenv": "^16.4.5",
-    "html2canvas": "^1.4.1",
+    "bootstrap": "^5.3.0",
     "jspdf": "^2.5.1",
-    "notistack": "^3.0.1",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.10.2",
-    "react-chartjs-2": "^5.2.0",
+    "react-bootstrap": "^2.9.0-beta.1",
     "react-dom": "^18.2.0",
-    "react-redux": "^9.1.1",
-    "react-router-dom": "^6.22.3",
-    "redux": "^5.0.1"
+    "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
